--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "@craco/craco": "^6.1.1",
+    "@fullhuman/postcss-purgecss": "^5.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.14",
     "craco-less": "^1.17.1",
+    "cssnano": "^5.1.15",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "mongoose": "^7.0.1",
@@ -19,10 +21,13 @@
     "react-scripts": "^4.0.0",
     "router": "^1.3.8",
     "router-dom": "^2.2.10",
+    "watch": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "craco start",
+    "build:css": "postcss src/tailwind.css -o static/dist/tailwind.css",
+    "watch": "watch 'npm run build:css' ./layouts",
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
